header & footer details, animations

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <header>
         <div class="main-header">
         
-          <strong class="main-logo"><img width="150px" src="img/logo.jpg" alt=""></strong>
+          <strong class="main-title"><a >LOS HORNEROS</a></strong>
 
         <nav id="nav" class="main-nav">
           <div class="nav-links">
-            <a class="link-item" href="#">Productos</a>
-            <a class="link-item" href="#">Quienes somos</a>
-            <a class="link-item" href="#">Contacto</a>
-            <a class="link-item" href="#">Ubicacion </a>
+            <a class="link-item" id="link-item1" href="#">Productos</a>
+            <a class="link-item" id="link-item2" href="#">Quienes somos</a>
+            <a class="link-item" id="link-item3" href="#">Contacto</a>
+            <a class="link-item" id="link-item4" href="#">Ubicacion </a>
           </div>
         </nav>
         <button id="button-menu" class="button-menu">
@@ -33,9 +33,6 @@
       </header>
 </header>
 <main class="main">
-<div class="main-title">
-  <h1>LOS HORNEROS</h1>
-</div>
 </main>
 <footer class="footer">3</footer>
 </body>
