fix styles problem

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="main-header">
         
-          <strong class="main-title"><a >LOS HORNEROS</a></strong>
+          <strong class="main-title"><a class="header-logo">LOS HORNEROS</a></strong>
 
         <nav id="nav" class="main-nav">
           <div class="nav-links">
